# j2x

./: CMakeLists.txt  README.md  TODO
data/: generated.json
src/: defines.h  main.cpp  xjx.cpp  xjx.h  xml_iterator.cpp  xml_iterator.h
